--- a/index.html
+++ b/index.html
@@ -705,7 +705,7 @@ input[type=range]{accent-color:var(--gold);cursor:pointer;width:80px}
       </select>
     </div>
     <div class="sc">
-      <label data-i="lbl_qual">Kalite: <span class="qval" id="qval">85%</span></label>
+      <label><span data-i="lbl_qual">Kalite:</span> <span class="qval" id="qval">85%</span></label>
       <input type="range" id="qrange" min="40" max="100" value="85">
     </div>
   </div>
@@ -814,7 +814,9 @@ input[type=range]{accent-color:var(--gold);cursor:pointer;width:80px}
       <div class="split-badge"><b id="splitTotal">0</b> <span data-i="lbl_pages">sayfa</span></div>
     </div>
     <div class="split-range-area">
-      <div class="split-range-lbl" data-i="split_range_lbl">Sayfa aralığı: <b id="splitPreview">-</b></div>
+      <div class="split-range-lbl">
+        <span data-i="split_range_lbl">Seçili sayfalar:</span> <b id="splitPreview">-</b>
+      </div>
       <input class="split-range-inp" id="splitRangeInp" type="text" placeholder="ör: 1-3, 5, 7-9">
       <div class="split-range-hint" data-i="split_range_hint">Virgülle ayır · Örnek: 1-3, 5, 8-10</div>
     </div>
